{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 358,
  "lineage": "ab1e867a-b4f5-5851-37be-e4c59dd8863b",
  "resources": [
    {
      "module": "module.dev_ansible",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ansible_Auto_D_Node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08970fb2e5767e3b8",
            "arn": "arn:aws:ec2:us-west-2:842051480147:instance/i-09c06a5ac11c674c4",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09c06a5ac11c674c4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-058b43c36b7a24cf2",
            "private_dns": "ip-10-0-3-105.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.105",
            "public_ip": "34.219.155.37",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c70039a95bda659c",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08aa6b18e987ed8c9",
            "tags": {
              "Name": "Ansible_Node"
            },
            "tags_all": {
              "Name": "Ansible_Node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0debc528c6af01b9a"
            ]
          },
          "dependencies": [
            "module.dev_securitygroups.aws_security_group.DocJenSona_sg",
            "module.dev_vpc.aws_subnet.JenCont-prv-sn1",
            "module.keypair.aws_key_pair.JenCont_Key"
          ]
        }
      ]
    },
    {
      "module": "module.dev_bashion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Bastion-Host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08970fb2e5767e3b8",
            "arn": "arn:aws:ec2:us-west-2:842051480147:instance/i-084d9a57b668cea86",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-084d9a57b668cea86",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-034b9dfb3781ef578",
            "private_dns": "ip-10-0-1-54.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.54",
            "public_ip": "52.40.102.186",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d4d727ce5251794c",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-027b573712087375b",
            "tags": {
              "Name": "Bastion_Node"
            },
            "tags_all": {
              "Name": "Bastion_Node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0debc528c6af01b9a"
            ]
          },
          "dependencies": [
            "module.dev_securitygroups.aws_security_group.DocJenSona_sg",
            "module.dev_vpc.aws_subnet.JenCont-pub-sn1",
            "module.dev_vpc.aws_vpc.JenCont-vpc",
            "module.keypair.aws_key_pair.JenCont_Key"
          ]
        }
      ]
    },
    {
      "module": "module.dev_docker",
      "mode": "managed",
      "type": "aws_instance",
      "name": "JenCont-Docker-Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08970fb2e5767e3b8",
            "arn": "arn:aws:ec2:us-west-2:842051480147:instance/i-012884c49235cb602",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-012884c49235cb602",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00832ff30a610818d",
            "private_dns": "ip-10-0-3-113.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.113",
            "public_ip": "34.219.65.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a17e9707af3af861",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08aa6b18e987ed8c9",
            "tags": {
              "Name": "JenCont-Docker-Server"
            },
            "tags_all": {
              "Name": "JenCont-Docker-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0debc528c6af01b9a"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "module.dev_securitygroups.aws_security_group.DocJenSona_sg",
            "module.dev_vpc.aws_subnet.JenCont-prv-sn1",
            "module.dev_vpc.aws_vpc.JenCont-vpc",
            "module.keypair.aws_key_pair.JenCont_Key"
          ]
        }
      ]
    },
    {
      "module": "module.dev_jenkins",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Jenkins-Host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08970fb2e5767e3b8",
            "arn": "arn:aws:ec2:us-west-2:842051480147:instance/i-0a03d7c8084694923",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a03d7c8084694923",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c14ab68c72fa36cc",
            "private_dns": "ip-10-0-1-98.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.98",
            "public_ip": "34.217.134.219",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09aac36b05d0dd79a",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-027b573712087375b",
            "tags": {
              "Name": "Jenkins-Server"
            },
            "tags_all": {
              "Name": "Jenkins-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0debc528c6af01b9a"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "module.dev_securitygroups.aws_security_group.DocJenSona_sg",
            "module.dev_vpc.aws_subnet.JenCont-pub-sn1",
            "module.keypair.aws_key_pair.JenCont_Key"
          ]
        }
      ]
    },
    {
      "module": "module.dev_jenkins_lb",
      "mode": "managed",
      "type": "aws_elb",
      "name": "jenkins-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:842051480147:loadbalancer/jenkins-lb",
            "availability_zones": [
              "us-west-2a"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "jenkins-lb-1084522988.us-west-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "TCP:8080",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "jenkins-lb",
            "idle_timeout": 400,
            "instances": [
              "i-0a03d7c8084694923"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "jenkins-lb",
            "security_groups": [
              "sg-0debc528c6af01b9a"
            ],
            "source_security_group": "842051480147/DocJenSona_sg",
            "source_security_group_id": "sg-0debc528c6af01b9a",
            "subnets": [
              "subnet-027b573712087375b"
            ],
            "tags": {
              "Name": "jenkins-lb"
            },
            "tags_all": {
              "Name": "jenkins-lb"
            },
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.dev_jenkins.aws_instance.Jenkins-Host",
            "module.dev_securitygroups.aws_security_group.DocJenSona_sg",
            "module.dev_vpc.aws_subnet.JenCont-pub-sn1",
            "module.keypair.aws_key_pair.JenCont_Key"
          ]
        }
      ]
    },
    {
      "module": "module.dev_loadbalance",
      "mode": "managed",
      "type": "aws_lb",
      "name": "JenContainer-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:842051480147:loadbalancer/app/JenContainer-lb/484163afbb9bd45e",
            "arn_suffix": "app/JenContainer-lb/484163afbb9bd45e",
            "desync_mitigation_mode": "defensive",
            "dns_name": "JenContainer-lb-526955896.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:842051480147:loadbalancer/app/JenContainer-lb/484163afbb9bd45e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "JenContainer-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0debc528c6af01b9a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00130f64fa8c094f0"
              },
              {
                "subnet_id": "subnet-027b573712087375b"
              }
            ],
            "subnets": [
              "subnet-00130f64fa8c094f0",
              "subnet-027b573712087375b"
            ],
            "vpc_id": "vpc-0b89c6cc26e393100",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.dev_securitygroups.aws_security_group.DocJenSona_sg",
            "module.dev_vpc.aws_subnet.JenCont-pub-sn1",
            "module.dev_vpc.aws_subnet.JenCont-pub-sn2"
          ]
        }
      ]
    },
    {
      "module": "module.dev_loadbalance",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "JenContainer_lb_lisner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:842051480147:listener/app/JenContainer-lb/484163afbb9bd45e/a4dc70bb99055c64",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:842051480147:targetgroup/Jencontainer-tg/3e5bcd0ca66a2a2d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:842051480147:listener/app/JenContainer-lb/484163afbb9bd45e/a4dc70bb99055c64",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:842051480147:loadbalancer/app/JenContainer-lb/484163afbb9bd45e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_loadbalance.aws_lb.JenContainer-lb",
            "module.dev_loadbalance.aws_lb_target_group.Jencontainer-tg",
            "module.dev_securitygroups.aws_security_group.DocJenSona_sg",
            "module.dev_vpc.aws_subnet.JenCont-pub-sn1",
            "module.dev_vpc.aws_subnet.JenCont-pub-sn2",
            "module.dev_vpc.aws_vpc.JenCont-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_loadbalance",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "Jencontainer-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:842051480147:targetgroup/Jencontainer-tg/3e5bcd0ca66a2a2d",
            "arn_suffix": "targetgroup/Jencontainer-tg/3e5bcd0ca66a2a2d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:842051480147:targetgroup/Jencontainer-tg/3e5bcd0ca66a2a2d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Jencontainer-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b89c6cc26e393100"
          },
          "dependencies": [
            "module.dev_vpc.aws_vpc.JenCont-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_loadbalance",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "PEP_attachmenet_TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:842051480147:targetgroup/Jencontainer-tg/3e5bcd0ca66a2a2d-20221015171719061400000002",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:842051480147:targetgroup/Jencontainer-tg/3e5bcd0ca66a2a2d",
            "target_id": "i-012884c49235cb602"
          },
          "dependencies": [
            "module.dev_docker.aws_instance.JenCont-Docker-Server",
            "module.dev_loadbalance.aws_lb_target_group.Jencontainer-tg",
            "module.dev_vpc.aws_vpc.JenCont-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_securitygroups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DocJenSona_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:842051480147:security-group/sg-0debc528c6af01b9a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0debc528c6af01b9a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow custom port which is port 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow http port which is port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow sonar port which is port 9000",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ssh port which is port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "DocJenSona_sg",
            "name_prefix": "",
            "owner_id": "842051480147",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DocJenSona_sg"
            },
            "tags_all": {
              "Name": "DocJenSona_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b89c6cc26e393100"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_vpc.aws_vpc.JenCont-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_securitygroups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow custom port which is port 8080",
            "from_port": 8080,
            "id": "sgrule-3909702776",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0debc528c6af01b9a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_securitygroups.aws_security_group.DocJenSona_sg",
            "module.dev_vpc.aws_vpc.JenCont-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_securitygroups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow http port which is port 80",
            "from_port": 80,
            "id": "sgrule-4286730095",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0debc528c6af01b9a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_securitygroups.aws_security_group.DocJenSona_sg",
            "module.dev_vpc.aws_vpc.JenCont-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_securitygroups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_outgoing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2675022784",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0debc528c6af01b9a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_securitygroups.aws_security_group.DocJenSona_sg",
            "module.dev_vpc.aws_vpc.JenCont-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_securitygroups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_sona",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow sonar port which is port 9000",
            "from_port": 9000,
            "id": "sgrule-1646446373",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0debc528c6af01b9a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 9000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_securitygroups.aws_security_group.DocJenSona_sg",
            "module.dev_vpc.aws_vpc.JenCont-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_securitygroups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow ssh port which is port 22",
            "from_port": 22,
            "id": "sgrule-1225265882",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0debc528c6af01b9a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_securitygroups.aws_security_group.DocJenSona_sg",
            "module.dev_vpc.aws_vpc.JenCont-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_sonarQube",
      "mode": "managed",
      "type": "aws_instance",
      "name": "sonarQube-Host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08970fb2e5767e3b8",
            "arn": "arn:aws:ec2:us-west-2:842051480147:instance/i-00f92f65d66b7432e",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00f92f65d66b7432e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "test-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06086690f0a4456d9",
            "private_dns": "ip-10-0-2-71.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.71",
            "public_ip": "54.214.197.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08d78cedfbf505bec",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00130f64fa8c094f0",
            "tags": {
              "Name": "sonarQube-Server"
            },
            "tags_all": {
              "Name": "sonarQube-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0debc528c6af01b9a"
            ]
          },
          "dependencies": [
            "module.dev_securitygroups.aws_security_group.DocJenSona_sg",
            "module.dev_vpc.aws_subnet.JenCont-pub-sn2"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "JenCont_EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ec3f03cc72b97560",
            "association_id": "eipassoc-0cfd787639fc94eb2",
            "domain": "vpc",
            "id": "eipalloc-0ec3f03cc72b97560",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0cf2ac1526f487076",
            "private_dns": "ip-10-0-1-167.us-west-2.compute.internal",
            "private_ip": "10.0.1.167",
            "public_dns": "ec2-35-81-29-254.us-west-2.compute.amazonaws.com",
            "public_ip": "35.81.29.254",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.dev_vpc.aws_internet_gateway.JenCont-igw",
            "module.dev_vpc.aws_vpc.JenCont-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "JenCont-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:842051480147:internet-gateway/igw-01d2d81f752ec262c",
            "id": "igw-01d2d81f752ec262c",
            "owner_id": "842051480147",
            "tags": {
              "Name": "JenCont-igw"
            },
            "tags_all": {
              "Name": "JenCont-igw"
            },
            "vpc_id": "vpc-0b89c6cc26e393100"
          },
          "dependencies": [
            "module.dev_vpc.aws_vpc.JenCont-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "JenCont_NAT_GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ec3f03cc72b97560",
            "connectivity_type": "public",
            "id": "nat-0accbc984f8cee114",
            "network_interface_id": "eni-0cf2ac1526f487076",
            "private_ip": "10.0.1.167",
            "public_ip": "35.81.29.254",
            "subnet_id": "subnet-027b573712087375b",
            "tags": {
              "Name": "JenCont_NAT_GW"
            },
            "tags_all": {
              "Name": "JenCont_NAT_GW"
            }
          },
          "dependencies": [
            "module.dev_vpc.aws_eip.JenCont_EIP",
            "module.dev_vpc.aws_internet_gateway.JenCont-igw",
            "module.dev_vpc.aws_subnet.JenCont-pub-sn1",
            "module.dev_vpc.aws_vpc.JenCont-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "JenCont_PRV_SN_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:842051480147:route-table/rtb-031a1243a0fc1a6e5",
            "id": "rtb-031a1243a0fc1a6e5",
            "owner_id": "842051480147",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0accbc984f8cee114",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "JenCont_PRV_SN_RT"
            },
            "tags_all": {
              "Name": "JenCont_PRV_SN_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b89c6cc26e393100"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_vpc.aws_nat_gateway.JenCont_NAT_GW",
            "module.dev_vpc.aws_vpc.JenCont-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "JenCont_PUB_SN_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:842051480147:route-table/rtb-000913bb0a2f29668",
            "id": "rtb-000913bb0a2f29668",
            "owner_id": "842051480147",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01d2d81f752ec262c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "JenCont_PUB_SN_RT"
            },
            "tags_all": {
              "Name": "JenCont_PUB_SN_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b89c6cc26e393100"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev_vpc.aws_internet_gateway.JenCont-igw",
            "module.dev_vpc.aws_vpc.JenCont-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06892e7db2da6beb0",
            "route_table_id": "rtb-000913bb0a2f29668",
            "subnet_id": "subnet-027b573712087375b"
          },
          "dependencies": [
            "module.dev_vpc.aws_internet_gateway.JenCont-igw",
            "module.dev_vpc.aws_route_table.JenCont_PUB_SN_RT",
            "module.dev_vpc.aws_subnet.JenCont-pub-sn1",
            "module.dev_vpc.aws_vpc.JenCont-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af8f2876c69c2709",
            "route_table_id": "rtb-031a1243a0fc1a6e5",
            "subnet_id": "subnet-08aa6b18e987ed8c9"
          },
          "dependencies": [
            "module.dev_vpc.aws_eip.JenCont_EIP",
            "module.dev_vpc.aws_internet_gateway.JenCont-igw",
            "module.dev_vpc.aws_nat_gateway.JenCont_NAT_GW",
            "module.dev_vpc.aws_route_table.JenCont_PRV_SN_RT",
            "module.dev_vpc.aws_subnet.JenCont-prv-sn1",
            "module.dev_vpc.aws_subnet.JenCont-pub-sn1",
            "module.dev_vpc.aws_vpc.JenCont-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b25900c3a69d7229",
            "route_table_id": "rtb-000913bb0a2f29668",
            "subnet_id": "subnet-00130f64fa8c094f0"
          },
          "dependencies": [
            "module.dev_vpc.aws_internet_gateway.JenCont-igw",
            "module.dev_vpc.aws_route_table.JenCont_PUB_SN_RT",
            "module.dev_vpc.aws_subnet.JenCont-pub-sn2",
            "module.dev_vpc.aws_vpc.JenCont-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07da3ca1661679e13",
            "route_table_id": "rtb-031a1243a0fc1a6e5",
            "subnet_id": "subnet-01d4a72e5b2b5e311"
          },
          "dependencies": [
            "module.dev_vpc.aws_eip.JenCont_EIP",
            "module.dev_vpc.aws_internet_gateway.JenCont-igw",
            "module.dev_vpc.aws_nat_gateway.JenCont_NAT_GW",
            "module.dev_vpc.aws_route_table.JenCont_PRV_SN_RT",
            "module.dev_vpc.aws_subnet.JenCont-prv-sn2",
            "module.dev_vpc.aws_subnet.JenCont-pub-sn1",
            "module.dev_vpc.aws_vpc.JenCont-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "JenCont-prv-sn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:842051480147:subnet/subnet-08aa6b18e987ed8c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08aa6b18e987ed8c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "842051480147",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "JenCont-prv_sn1"
            },
            "tags_all": {
              "Name": "JenCont-prv_sn1"
            },
            "vpc_id": "vpc-0b89c6cc26e393100"
          },
          "dependencies": [
            "module.dev_vpc.aws_vpc.JenCont-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "JenCont-prv-sn2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:842051480147:subnet/subnet-01d4a72e5b2b5e311",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d4a72e5b2b5e311",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "842051480147",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "JenCont-prv_sn2"
            },
            "tags_all": {
              "Name": "JenCont-prv_sn2"
            },
            "vpc_id": "vpc-0b89c6cc26e393100"
          },
          "dependencies": [
            "module.dev_vpc.aws_vpc.JenCont-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "JenCont-pub-sn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:842051480147:subnet/subnet-027b573712087375b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027b573712087375b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "842051480147",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "JenCont-pub_sn1"
            },
            "tags_all": {
              "Name": "JenCont-pub_sn1"
            },
            "vpc_id": "vpc-0b89c6cc26e393100"
          },
          "dependencies": [
            "module.dev_vpc.aws_vpc.JenCont-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "JenCont-pub-sn2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:842051480147:subnet/subnet-00130f64fa8c094f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00130f64fa8c094f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "842051480147",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "JenCont-pub_sn2"
            },
            "tags_all": {
              "Name": "JenCont-pub_sn2"
            },
            "vpc_id": "vpc-0b89c6cc26e393100"
          },
          "dependencies": [
            "module.dev_vpc.aws_vpc.JenCont-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "JenCont-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:842051480147:vpc/vpc-0b89c6cc26e393100",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06cc2d53f4fee19ca",
            "default_route_table_id": "rtb-05e4133a9f044241f",
            "default_security_group_id": "sg-060d2820adc8ed675",
            "dhcp_options_id": "dopt-0bf73da7cd25a7117",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b89c6cc26e393100",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05e4133a9f044241f",
            "owner_id": "842051480147",
            "tags": {
              "Name": "JenCont"
            },
            "tags_all": {
              "Name": "JenCont"
            }
          }
        }
      ]
    }
  ]
}